<resources>
    <string name="app_name">Organizze</string>
    <string name="intro_1_text1">Organize suas contas \n de onde estiver</string>
    <string name="intro1_text2">Simples e fácil de usar</string>
    <string name="intro2_text1">Saiba para onde está indo seu dinheiro</string>
    <string name="intro2_text2">Categorizando seus lançamentos e vendo o \n destino de cada centavo</string>
    <string name="intro3_text1">Nunca mais esqueça de \n pagar uma conta</string>
    <string name="intro3_text2">Receba alertas quando quiser</string>
    <string name="intro4_text1">Tudo organizado, no \n celular ou computador</string>
    <string name="intro4_text2">Use no seu smartphone e acessando o \n Organizze pelo site</string>
    <string name="intro_cad_text1">Crie sua conta grátis!</string>
    <string name="intro_cad_text2">Junte-se a mais de meio milhão \n de pessoas e comece já</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="ja_tenho_conta">Já tenho conta</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="preencha_nome">Preencha o nome!</string>
    <string name="preencha_email">Preencha o E-mail!</string>
    <string name="preencha_senha">Preencha a senha!</string>
    <string name="sucesso_cad_user">Sucesso ao cadastrar usuário</string>
    <string name="falha_cad_user">Falha ao cadastrar usuário</string>
    <string name="digite_senha_forte">Digite uma senha mais forte!</string>
    <string name="digite_email_valido">Por favor, digite um e-mail válido!</string>
    <string name="usuario_cadastrado">Usuário já cadastrado!</string>
    <string name="falha_login">Falha ao fazer login</string>
    <string name="usuario_nao_cadastrado">Usuário não está cadastrado</string>
    <string name="senha_email_invalido">Senha ou e-mail inválidos</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="ex_salario">Ex: Salário</string>
    <string name="ex_salario_mensal">Ex: Salário Mensal</string>
    <string name="preencha_valor">Preencha um valor!</string>
    <string name="preencha_data">Preencha uma data</string>
    <string name="preencha_descricao">Preencha uma descrição</string>
    <string name="preencha_categoria">preencha uma categoria</string>
    <string name="salvo_sucesso">Salvo com sucesso</string>
</resources>
